k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: local.test
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: web-image-service
            port: 
              number: 8080
